Fixed x-overflow

--- a/Style.css
+++ b/Style.css
@@ -2,7 +2,7 @@
 
 body{
     font-family: 'Source Sans Pro', sans-serif;
-    overflow-x: hidden; 
+    
 }
 h2 {
     font-size: 36px;
@@ -15,11 +15,6 @@ h3 {
 
 .main {
     padding: 50px;
-    position: absolute;
-    width: 100%;
-    height: 300px;
-    right: 70%;
-    left: 30%;
 }
 #recent{
     position: absolute;
@@ -34,7 +29,7 @@ h3 {
     margin-top: 10px;
     padding-left: 20px;
     padding-right:20px;
-    width: 460%;
+    width: 94vw;
     position: relative;
     align-self: center;
     align-items: center;
